--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,10 @@
           <source>1.6</source>
           <target>1.6</target>
           <showDeprecation>true</showDeprecation>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
+          <compilerArguments>
+          	<Xlint:unchecked />
+          	<bootclasspath>/usr/java/jdk1.6.0_45/jre/lib/rt.jar</bootclasspath>
+          </compilerArguments>
           <compilerId>javac-with-errorprone</compilerId>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
         </configuration>
